tests/fail/include_self.werk
include "included"

#!file included=include "included"
